...
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    >


    <Button
        android:id="@+id/eraseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
...
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/types_of_house"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:entries="@array/typeOfHouses"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:hint="@string/cities" />
...
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/rooms_filter"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/MinRooms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number" />
...
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/trait_union"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/MaxRooms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number" />
...
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/surface"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/MinSurface"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number" />
...
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/trait_union"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/MaxSurface"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number" />
...
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/MinPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number" />
...
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/trait_union"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/MaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Filter"
...
